versions/0.9.0/_sources/refs/_aws-cdk_aws-ses.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"sxyEd9v0wBN8JOmPvqAeFKw5SC8p6CXUOLEZqoG2Sbg="}

@aws-cdk/aws-ses
================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.SES/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.SES" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.SES --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.SES" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/ses/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:ses:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="ses" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>ses</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:ses:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='ses', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-ses/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-ses@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-ses": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-ses@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-ses/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-ses@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-ses": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-ses@0.9.0



.. mdinclude:: ./__aws-cdk_aws-ses.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-ses

ConfigurationSetName
^^^^^^^^^^^^^^^^^^^^

.. py:class:: ConfigurationSetName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.ConfigurationSetName;

      .. code-tab:: javascript

         const { ConfigurationSetName } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { ConfigurationSetName } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ReceiptFilterName
^^^^^^^^^^^^^^^^^

.. py:class:: ReceiptFilterName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.ReceiptFilterName;

      .. code-tab:: javascript

         const { ReceiptFilterName } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { ReceiptFilterName } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ReceiptRuleName
^^^^^^^^^^^^^^^

.. py:class:: ReceiptRuleName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.ReceiptRuleName;

      .. code-tab:: javascript

         const { ReceiptRuleName } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { ReceiptRuleName } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ReceiptRuleSetName
^^^^^^^^^^^^^^^^^^

.. py:class:: ReceiptRuleSetName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.ReceiptRuleSetName;

      .. code-tab:: javascript

         const { ReceiptRuleSetName } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { ReceiptRuleSetName } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

TemplateId
^^^^^^^^^^

.. py:class:: TemplateId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.TemplateId;

      .. code-tab:: javascript

         const { TemplateId } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { TemplateId } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-ses.cloudformation

ConfigurationSetEventDestinationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationSetEventDestinationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.ConfigurationSetEventDestinationResource;

      .. code-tab:: javascript

         const { cloudformation.ConfigurationSetEventDestinationResource } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { cloudformation.ConfigurationSetEventDestinationResource } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConfigurationSetEventDestinationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConfigurationSetEventDestinationResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetEventDestinationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: CloudWatchDestinationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ConfigurationSetEventDestinationResource.CloudWatchDestinationProperty;

         .. code-tab:: javascript

            // cloudformation.ConfigurationSetEventDestinationResource.CloudWatchDestinationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConfigurationSetEventDestinationResource.CloudWatchDestinationProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: dimensionConfigurations

         ``ConfigurationSetEventDestinationResource.CloudWatchDestinationProperty.DimensionConfigurations``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-cloudwatchdestination.html#cfn-ses-configurationseteventdestination-cloudwatchdestination-dimensionconfigurations


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetEventDestinationResource.DimensionConfigurationProperty`)[] or undefined


   .. py:class:: DimensionConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ConfigurationSetEventDestinationResource.DimensionConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ConfigurationSetEventDestinationResource.DimensionConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConfigurationSetEventDestinationResource.DimensionConfigurationProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: defaultDimensionValue

         ``ConfigurationSetEventDestinationResource.DimensionConfigurationProperty.DefaultDimensionValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-dimensionconfiguration.html#cfn-ses-configurationseteventdestination-dimensionconfiguration-defaultdimensionvalue


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: dimensionName

         ``ConfigurationSetEventDestinationResource.DimensionConfigurationProperty.DimensionName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-dimensionconfiguration.html#cfn-ses-configurationseteventdestination-dimensionconfiguration-dimensionname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: dimensionValueSource

         ``ConfigurationSetEventDestinationResource.DimensionConfigurationProperty.DimensionValueSource``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-dimensionconfiguration.html#cfn-ses-configurationseteventdestination-dimensionconfiguration-dimensionvaluesource


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: EventDestinationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ConfigurationSetEventDestinationResource.EventDestinationProperty;

         .. code-tab:: javascript

            // cloudformation.ConfigurationSetEventDestinationResource.EventDestinationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConfigurationSetEventDestinationResource.EventDestinationProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: matchingEventTypes

         ``ConfigurationSetEventDestinationResource.EventDestinationProperty.MatchingEventTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-eventdestination.html#cfn-ses-configurationseteventdestination-eventdestination-matchingeventtypes


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


      .. py:attribute:: cloudWatchDestination

         ``ConfigurationSetEventDestinationResource.EventDestinationProperty.CloudWatchDestination``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-eventdestination.html#cfn-ses-configurationseteventdestination-eventdestination-cloudwatchdestination


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetEventDestinationResource.CloudWatchDestinationProperty` or undefined


      .. py:attribute:: enabled

         ``ConfigurationSetEventDestinationResource.EventDestinationProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-eventdestination.html#cfn-ses-configurationseteventdestination-eventdestination-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: kinesisFirehoseDestination

         ``ConfigurationSetEventDestinationResource.EventDestinationProperty.KinesisFirehoseDestination``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-eventdestination.html#cfn-ses-configurationseteventdestination-eventdestination-kinesisfirehosedestination


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetEventDestinationResource.KinesisFirehoseDestinationProperty` or undefined


      .. py:attribute:: name

         ``ConfigurationSetEventDestinationResource.EventDestinationProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-eventdestination.html#cfn-ses-configurationseteventdestination-eventdestination-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: KinesisFirehoseDestinationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ConfigurationSetEventDestinationResource.KinesisFirehoseDestinationProperty;

         .. code-tab:: javascript

            // cloudformation.ConfigurationSetEventDestinationResource.KinesisFirehoseDestinationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConfigurationSetEventDestinationResource.KinesisFirehoseDestinationProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: deliveryStreamArn

         ``ConfigurationSetEventDestinationResource.KinesisFirehoseDestinationProperty.DeliveryStreamARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-kinesisfirehosedestination.html#cfn-ses-configurationseteventdestination-kinesisfirehosedestination-deliverystreamarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: iamRoleArn

         ``ConfigurationSetEventDestinationResource.KinesisFirehoseDestinationProperty.IAMRoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-configurationseteventdestination-kinesisfirehosedestination.html#cfn-ses-configurationseteventdestination-kinesisfirehosedestination-iamrolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`



ConfigurationSetEventDestinationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationSetEventDestinationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.ConfigurationSetEventDestinationResourceProps;

      .. code-tab:: javascript

         // cloudformation.ConfigurationSetEventDestinationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ConfigurationSetEventDestinationResourceProps } from '@aws-cdk/aws-ses';





   .. py:attribute:: configurationSetName

      ``AWS::SES::ConfigurationSetEventDestination.ConfigurationSetName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-configurationseteventdestination.html#cfn-ses-configurationseteventdestination-configurationsetname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: eventDestination

      ``AWS::SES::ConfigurationSetEventDestination.EventDestination``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-configurationseteventdestination.html#cfn-ses-configurationseteventdestination-eventdestination


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetEventDestinationResource.EventDestinationProperty`


ConfigurationSetResource
~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationSetResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.ConfigurationSetResource;

      .. code-tab:: javascript

         const { cloudformation.ConfigurationSetResource } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { cloudformation.ConfigurationSetResource } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConfigurationSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConfigurationSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.ConfigurationSetResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-ses.ConfigurationSetName` *(readonly)*


ConfigurationSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.ConfigurationSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.ConfigurationSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ConfigurationSetResourceProps } from '@aws-cdk/aws-ses';





   .. py:attribute:: configurationSetName

      ``AWS::SES::ConfigurationSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-configurationset.html#cfn-ses-configurationset-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


ReceiptFilterResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptFilterResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.ReceiptFilterResource;

      .. code-tab:: javascript

         const { cloudformation.ReceiptFilterResource } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { cloudformation.ReceiptFilterResource } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ReceiptFilterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ReceiptFilterResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptFilterResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-ses.ReceiptFilterName` *(readonly)*

   .. py:class:: FilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptFilterResource.FilterProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptFilterResource.FilterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptFilterResource.FilterProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: ipFilter

         ``ReceiptFilterResource.FilterProperty.IpFilter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptfilter-filter.html#cfn-ses-receiptfilter-filter-ipfilter


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptFilterResource.IpFilterProperty`


      .. py:attribute:: name

         ``ReceiptFilterResource.FilterProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptfilter-filter.html#cfn-ses-receiptfilter-filter-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: IpFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptFilterResource.IpFilterProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptFilterResource.IpFilterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptFilterResource.IpFilterProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: cidr

         ``ReceiptFilterResource.IpFilterProperty.Cidr``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptfilter-ipfilter.html#cfn-ses-receiptfilter-ipfilter-cidr


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: policy

         ``ReceiptFilterResource.IpFilterProperty.Policy``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptfilter-ipfilter.html#cfn-ses-receiptfilter-ipfilter-policy


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`



ReceiptFilterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptFilterResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.ReceiptFilterResourceProps;

      .. code-tab:: javascript

         // cloudformation.ReceiptFilterResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ReceiptFilterResourceProps } from '@aws-cdk/aws-ses';





   .. py:attribute:: filter

      ``AWS::SES::ReceiptFilter.Filter``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-receiptfilter.html#cfn-ses-receiptfilter-filter


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptFilterResource.FilterProperty`


ReceiptRuleResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptRuleResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResource;

      .. code-tab:: javascript

         const { cloudformation.ReceiptRuleResource } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { cloudformation.ReceiptRuleResource } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ReceiptRuleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ReceiptRuleResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-ses.ReceiptRuleName` *(readonly)*

   .. py:class:: ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResource.ActionProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptRuleResource.ActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptRuleResource.ActionProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: addHeaderAction

         ``ReceiptRuleResource.ActionProperty.AddHeaderAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-addheaderaction


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.AddHeaderActionProperty` or undefined


      .. py:attribute:: bounceAction

         ``ReceiptRuleResource.ActionProperty.BounceAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-bounceaction


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.BounceActionProperty` or undefined


      .. py:attribute:: lambdaAction

         ``ReceiptRuleResource.ActionProperty.LambdaAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-lambdaaction


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.LambdaActionProperty` or undefined


      .. py:attribute:: s3Action

         ``ReceiptRuleResource.ActionProperty.S3Action``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-s3action


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.S3ActionProperty` or undefined


      .. py:attribute:: snsAction

         ``ReceiptRuleResource.ActionProperty.SNSAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-snsaction


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.SNSActionProperty` or undefined


      .. py:attribute:: stopAction

         ``ReceiptRuleResource.ActionProperty.StopAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-stopaction


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.StopActionProperty` or undefined


      .. py:attribute:: workmailAction

         ``ReceiptRuleResource.ActionProperty.WorkmailAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-action.html#cfn-ses-receiptrule-action-workmailaction


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.WorkmailActionProperty` or undefined


   .. py:class:: AddHeaderActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResource.AddHeaderActionProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptRuleResource.AddHeaderActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptRuleResource.AddHeaderActionProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: headerName

         ``ReceiptRuleResource.AddHeaderActionProperty.HeaderName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-addheaderaction.html#cfn-ses-receiptrule-addheaderaction-headername


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: headerValue

         ``ReceiptRuleResource.AddHeaderActionProperty.HeaderValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-addheaderaction.html#cfn-ses-receiptrule-addheaderaction-headervalue


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: BounceActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResource.BounceActionProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptRuleResource.BounceActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptRuleResource.BounceActionProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: message

         ``ReceiptRuleResource.BounceActionProperty.Message``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-bounceaction.html#cfn-ses-receiptrule-bounceaction-message


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: sender

         ``ReceiptRuleResource.BounceActionProperty.Sender``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-bounceaction.html#cfn-ses-receiptrule-bounceaction-sender


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: smtpReplyCode

         ``ReceiptRuleResource.BounceActionProperty.SmtpReplyCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-bounceaction.html#cfn-ses-receiptrule-bounceaction-smtpreplycode


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: statusCode

         ``ReceiptRuleResource.BounceActionProperty.StatusCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-bounceaction.html#cfn-ses-receiptrule-bounceaction-statuscode


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.BounceActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-bounceaction.html#cfn-ses-receiptrule-bounceaction-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: LambdaActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResource.LambdaActionProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptRuleResource.LambdaActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptRuleResource.LambdaActionProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: functionArn

         ``ReceiptRuleResource.LambdaActionProperty.FunctionArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-lambdaaction.html#cfn-ses-receiptrule-lambdaaction-functionarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: invocationType

         ``ReceiptRuleResource.LambdaActionProperty.InvocationType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-lambdaaction.html#cfn-ses-receiptrule-lambdaaction-invocationtype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.LambdaActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-lambdaaction.html#cfn-ses-receiptrule-lambdaaction-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: RuleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResource.RuleProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptRuleResource.RuleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptRuleResource.RuleProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: actions

         ``ReceiptRuleResource.RuleProperty.Actions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-actions


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.ActionProperty`)[] or undefined


      .. py:attribute:: enabled

         ``ReceiptRuleResource.RuleProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: name

         ``ReceiptRuleResource.RuleProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: recipients

         ``ReceiptRuleResource.RuleProperty.Recipients``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-recipients


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: scanEnabled

         ``ReceiptRuleResource.RuleProperty.ScanEnabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-scanenabled


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: tlsPolicy

         ``ReceiptRuleResource.RuleProperty.TlsPolicy``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-rule.html#cfn-ses-receiptrule-rule-tlspolicy


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: S3ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResource.S3ActionProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptRuleResource.S3ActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptRuleResource.S3ActionProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: bucketName

         ``ReceiptRuleResource.S3ActionProperty.BucketName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-s3action.html#cfn-ses-receiptrule-s3action-bucketname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: kmsKeyArn

         ``ReceiptRuleResource.S3ActionProperty.KmsKeyArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-s3action.html#cfn-ses-receiptrule-s3action-kmskeyarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: objectKeyPrefix

         ``ReceiptRuleResource.S3ActionProperty.ObjectKeyPrefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-s3action.html#cfn-ses-receiptrule-s3action-objectkeyprefix


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.S3ActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-s3action.html#cfn-ses-receiptrule-s3action-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: SNSActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResource.SNSActionProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptRuleResource.SNSActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptRuleResource.SNSActionProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: encoding

         ``ReceiptRuleResource.SNSActionProperty.Encoding``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-snsaction.html#cfn-ses-receiptrule-snsaction-encoding


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.SNSActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-snsaction.html#cfn-ses-receiptrule-snsaction-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: StopActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResource.StopActionProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptRuleResource.StopActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptRuleResource.StopActionProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: scope

         ``ReceiptRuleResource.StopActionProperty.Scope``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-stopaction.html#cfn-ses-receiptrule-stopaction-scope


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.StopActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-stopaction.html#cfn-ses-receiptrule-stopaction-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: WorkmailActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResource.WorkmailActionProperty;

         .. code-tab:: javascript

            // cloudformation.ReceiptRuleResource.WorkmailActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReceiptRuleResource.WorkmailActionProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: organizationArn

         ``ReceiptRuleResource.WorkmailActionProperty.OrganizationArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-workmailaction.html#cfn-ses-receiptrule-workmailaction-organizationarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: topicArn

         ``ReceiptRuleResource.WorkmailActionProperty.TopicArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-receiptrule-workmailaction.html#cfn-ses-receiptrule-workmailaction-topicarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



ReceiptRuleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptRuleResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleResourceProps;

      .. code-tab:: javascript

         // cloudformation.ReceiptRuleResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ReceiptRuleResourceProps } from '@aws-cdk/aws-ses';





   .. py:attribute:: rule

      ``AWS::SES::ReceiptRule.Rule``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-receiptrule.html#cfn-ses-receiptrule-rule


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleResource.RuleProperty`


   .. py:attribute:: ruleSetName

      ``AWS::SES::ReceiptRule.RuleSetName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-receiptrule.html#cfn-ses-receiptrule-rulesetname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: after

      ``AWS::SES::ReceiptRule.After``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-receiptrule.html#cfn-ses-receiptrule-after


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


ReceiptRuleSetResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptRuleSetResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleSetResource;

      .. code-tab:: javascript

         const { cloudformation.ReceiptRuleSetResource } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { cloudformation.ReceiptRuleSetResource } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ReceiptRuleSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ReceiptRuleSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.ReceiptRuleSetResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-ses.ReceiptRuleSetName` *(readonly)*


ReceiptRuleSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReceiptRuleSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.ReceiptRuleSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.ReceiptRuleSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ReceiptRuleSetResourceProps } from '@aws-cdk/aws-ses';





   .. py:attribute:: ruleSetName

      ``AWS::SES::ReceiptRuleSet.RuleSetName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-receiptruleset.html#cfn-ses-receiptruleset-rulesetname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


TemplateResource
~~~~~~~~~~~~~~~~

.. py:class:: TemplateResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.TemplateResource;

      .. code-tab:: javascript

         const { cloudformation.TemplateResource } = require('@aws-cdk/aws-ses');

      .. code-tab:: typescript

         import { cloudformation.TemplateResource } from '@aws-cdk/aws-ses';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TemplateResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TemplateResource``
   :type properties: :py:class:`~@aws-cdk/aws-ses.cloudformation.TemplateResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-ses.TemplateId` *(readonly)*

   .. py:class:: TemplateProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SES;

         .. code-tab:: java

            import software.amazon.awscdk.services.ses.cloudformation.TemplateResource.TemplateProperty;

         .. code-tab:: javascript

            // cloudformation.TemplateResource.TemplateProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TemplateResource.TemplateProperty } from '@aws-cdk/aws-ses';





      .. py:attribute:: htmlPart

         ``TemplateResource.TemplateProperty.HtmlPart``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-template-template.html#cfn-ses-template-template-htmlpart


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: subjectPart

         ``TemplateResource.TemplateProperty.SubjectPart``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-template-template.html#cfn-ses-template-template-subjectpart


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: templateName

         ``TemplateResource.TemplateProperty.TemplateName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-template-template.html#cfn-ses-template-template-templatename


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: textPart

         ``TemplateResource.TemplateProperty.TextPart``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ses-template-template.html#cfn-ses-template-template-textpart


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



TemplateResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TemplateResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SES;

      .. code-tab:: java

         import software.amazon.awscdk.services.ses.cloudformation.TemplateResourceProps;

      .. code-tab:: javascript

         // cloudformation.TemplateResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TemplateResourceProps } from '@aws-cdk/aws-ses';





   .. py:attribute:: template

      ``AWS::SES::Template.Template``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ses-template.html#cfn-ses-template-template


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-ses.cloudformation.TemplateResource.TemplateProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-ses

